fix: fix z-index

--- a/src/components/Result/index.scss
+++ b/src/components/Result/index.scss
@@ -7,6 +7,7 @@
   right: 0;
   width: auto;
   background-color: rgba(0, 0, 0, 0.15);
+  z-index: 1;
 }
 
 .result__container {
@@ -37,4 +38,5 @@
 
 .result__close {
   margin-left: 10px;
+  margin-bottom: 10px;
 }
